--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "rules": {
       "no-unused-vars": "off",
       "@typescript-eslint/no-unused-vars": "error"
-    }
+    },
+    "plugins": [
+      "@typescript-eslint"
+    ]
   },
   "browserslist": {
     "production": [
