--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-share": "^4.4.0",
+    "react-spinners": "^0.11.0",
     "spinners-react": "^1.0.6",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
